# LinhasTransmisssao

./: makefile  pyproject.toml  test.py
src/: CasamentoGeral.py  CasamentoQO.py  LinhasTerminadas.py  ParaDist.py  SmithChart.py  SmithOperations.py  TocoParalelo.py  TocoSerie.py  main.py  plotsmith.py  transitorios.py
tests/: test_CartaSmith.py  test_LTT.py  test_ParaDist.py  test_casamentosZ.py  test_transitorio.py
