[tool.poetry]
name = "projeto"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11, <3.13"
pytest = "^7.4.2"
seaborn = "^0.13.0"
isort = "^5.12.0"
blue = "^0.9.1"
scipy = "^1.11.3"
taskipy = "^1.12.0"
numpy = "^1.26.0"
sympy = "^1.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "tests"
addopts = "--doctest-modules"

[tool.isort]
profile = "black"
line_length = 79

[tool.taskipy.tasks]
lint = "blue . && isort ."
pre_test = "task lint"
test = "pytest -x -vv"